# ComfyUI-LocateAnything

./: LocateAnything_basic_demo.json  README.md  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
web/: help_popup.js
